[package]
name = "tasksmanager"
version = "0.3.0"
edition = "2024"
authors = ["Prince Riwa"]
description = "A TUI task manager with Git and TCR integration"
license = "MIT"
repository = "https://github.com/prince-cell/taskmanager-tcr"
readme = "README.md"
keywords = ["tui", "task", "cli", "tcr"]
categories = ["command-line-utilities"]

[[bin]]
name = "tasksmanager"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
tui = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
